# synapse

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: axon.rs  radiance.rs  vortex.rs
src/: lib.rs  models.rs
